# Multiple-Choise-Recognition

./: .gitignore  LICENSE  README.md  infer_yolo.py  pyproject.toml  run_infer_yolo.sh  train_yolo.py
preprocess/: create_dataset.py  create_kaggle_dataset_yolo.py  create_tamaulipas_dataset_yolo.py  run_create_dataset.sh  tamaulipas.py
preprocess/kaggle/: extract_kaggle.py  kaggle.py
preprocess/tamaulipas/: extract_tamaulipas.py  tamaulipas.py
